# AdventOfCode2020

./: CMakeLists.txt
01/: main.cpp  main.h
02/: main.cpp  main.h
03/: main.cpp  main.h
04/: main.cpp  main.h
05/: main.cpp
06/: main.cpp
07/: main.cpp  main.h
template/: main.cpp
